--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ gemfile:
   - gemfiles/Gemfile.rails-3.0
   - gemfiles/Gemfile.rails-3.1
   - gemfiles/Gemfile.rails-3.2
+matrix:
+  exclude:
+    - rvm: 1.8.7
+    - gemfiles/Gemfile.rails-3.2
 notifications:
   recipients:
     - michal.lomnicki@gmail.com
