update travis & README to currently supported versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 rvm:
   - 1.9.3
+  - 2.0.0
 gemfile:
   - gemfiles/Gemfile.rails-3.2
+  - gemfiles/Gemfile.rails-4.0
 notifications:
   recipients:
     - michal.lomnicki@gmail.com
