--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ rvm:
 - 1.9.3
 - 2.1.5
 gemfile:
-- gemfiles/rails-3.2/Gemfile.sqlite3
-- gemfiles/rails-4.1/Gemfile.sqlite3
-- gemfiles/rails-4.2/Gemfile.sqlite3
+- gemfiles/activerecord-4.1/Gemfile.sqlite3
+- gemfiles/activerecord-4.2.0/Gemfile.sqlite3
 script: bundle exec rake travis
