--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,12 @@ sudo: false
 rvm:
 - 2.1.5
 gemfile:
+- gemfiles/activerecord-4.2.1/Gemfile.mysql2
+- gemfiles/activerecord-4.2.1/Gemfile.postgresql
 - gemfiles/activerecord-4.2.1/Gemfile.sqlite3
+env: POSTGRESQL_DB_USER=postgres MYSQL_DB_USER=travis
+addons:
+  postgresql: '9.4'
+before_script: bundle exec rake create_databases
+after_script: bundle exec rake drop_databases
 script: bundle exec rake travis
