--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ gemfile:
 - gemfiles/activerecord-5.1/Gemfile.mysql2
 - gemfiles/activerecord-5.1/Gemfile.postgresql
 - gemfiles/activerecord-5.1/Gemfile.sqlite3
+- gemfiles/activerecord-5.2/Gemfile.mysql2
+- gemfiles/activerecord-5.2/Gemfile.postgresql
+- gemfiles/activerecord-5.2/Gemfile.sqlite3
 env: POSTGRESQL_DB_USER=postgres MYSQL_DB_USER=travis
 addons:
   postgresql: '9.4'
