--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -42,6 +42,8 @@ jobs:
           activerecord: '5.2'
         - ruby: '2.5'
           activerecord: '7.0'
+        - ruby: '2.5'
+          activerecord: '7.1'
         - db: skip
           dbversion: skip
         include:
